--- a/app/src/main/res/layout/elementary_frag.xml
+++ b/app/src/main/res/layout/elementary_frag.xml
@@ -84,6 +84,77 @@
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
+    <!-- 词单 -->
+    <android.support.v7.widget.CardView
+        android:layout_marginTop="@dimen/space_xlarge"
+        android:layout_marginBottom="@dimen/space_xlarge"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginLeft="@dimen/space_normal"
+        android:layout_marginRight="@dimen/space_normal"
+        android:layout_weight="1">
+
+        <RelativeLayout
+            android:id="@+id/words"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clickable="true"
+            android:background="?attr/selectableItemBackground">
+
+            <ImageView
+                android:tint="?attr/colorPrimary"
+                android:scaleType="centerInside"
+                android:id="@+id/words_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:src="@drawable/ic_text_format_black_24dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/words_image"
+                android:layout_marginTop="5dp"
+                android:layout_centerHorizontal="true"
+                android:text="词单"/>
+
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+
+    <!-- 词单 -->
+    <android.support.v7.widget.CardView
+        android:layout_marginTop="@dimen/space_xlarge"
+        android:layout_marginBottom="@dimen/space_xlarge"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginLeft="@dimen/space_normal"
+        android:layout_marginRight="@dimen/space_normal"
+        android:layout_weight="1">
+
+        <RelativeLayout
+            android:id="@+id/sentences"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clickable="true"
+            android:background="?attr/selectableItemBackground">
+
+            <ImageView
+                android:tint="?attr/colorPrimary"
+                android:scaleType="centerInside"
+                android:id="@+id/sentences_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:src="@drawable/ic_text_format_black_24dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/sentences_image"
+                android:layout_marginTop="5dp"
+                android:layout_centerHorizontal="true"
+                android:text="短语句子"/>
+
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
 </LinearLayout>
 
 
