--- a/app/src/main/res/layout/activity_words.xml
+++ b/app/src/main/res/layout/activity_words.xml
@@ -8,7 +8,7 @@ tools:context="com.englishlearn.myapplication.phoneticssymbols.PhoneticsDetail.P
 
     <include layout="@layout/toolbar" />
 
-    <com.englishlearn.myapplication.sentences.ScrollChildSwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <com.englishlearn.myapplication.sentence.ScrollChildSwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -22,6 +22,6 @@ tools:context="com.englishlearn.myapplication.phoneticssymbols.PhoneticsDetail.P
 
         </com.englishlearn.myapplication.ui.LoadMoreListView>
 
-    </com.englishlearn.myapplication.sentences.ScrollChildSwipeRefreshLayout>
+    </com.englishlearn.myapplication.sentence.ScrollChildSwipeRefreshLayout>
 
 </LinearLayout>
