--- a/app/src/main/res/layout/sentences_frag.xml
+++ b/app/src/main/res/layout/sentences_frag.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.englishlearn.myapplication.sentences.ScrollChildSwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.englishlearn.myapplication.sentence.ScrollChildSwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:id="@+id/refresh_layout"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
@@ -47,7 +47,7 @@ android:paddingBottom="@dimen/activity_vertical_margin">
     </RelativeLayout>
 </LinearLayout>
 
-</com.englishlearn.myapplication.sentences.ScrollChildSwipeRefreshLayout>
+</com.englishlearn.myapplication.sentence.ScrollChildSwipeRefreshLayout>
 
 
 
